test-suite-native-only/tests/ui/compilefail/captcha_not_identified.rs
use hcaptcha_no_wasm::Hcaptcha;

#[derive(Hcaptcha)]
struct Test {
    Hcaptcha: String,
}

fn main() {
    println!("Super!");
}
